2007-06-21  Martin Hunt  <hunt@redhat.com>

	* control.c (_stp_ctl_write_cmd): Add support for STP_BULK.
	* transport_msgs.h (enum): Add STP_BULK.

2007-06-18  Martin Hunt  <hunt@redhat.com>

	* control.c (_stp_register_ctl_channel): Fix mode of cmd file.

2007-05-16  Will Cohen  <wcohen@redhat.com>

	* control.c: Explicit type cast for picky compilers.

2007-05-15  Martin Hunt  <hunt@redhat.com>

	* control.c: Change default buffer number and size.
	 (_stp_ctl_write): Add debug statements. Check size of
	message to avoid overwriting buffer.

2007-04-27  Martin Hunt  <hunt@redhat.com>

	* utt.h (struct utt_trace): Remove sequence.
	* utt.c (utt_trace_cleanup): Remove free of utt->sequence.
	(utt_dropped_open): PR 4415. Use STAPCONF_INODE_PRIVATE to detect
	correct inode struct.
	(utt_trace_setup): Do not allocate utt->sequence.

2007-04-02  Martin Hunt  <hunt@redhat.com>

	* transport_msgs.h (struct _stp_msg_trans): Deleted.
	Transport parameters are now read from procfs.

	* transport.c (_stp_ask_for_symbols): STP_TRANSPORT
	message is empty.

	* procfs.c (_stp_ctl_open_cmd): New. Set _stp_	pid.
	(_stp_ctl_close_cmd): New. Unset _stp_pid.
	(_stp_proc_fops_cmd): Add pointers to above funcs.
	(_stp_ctl_read_bufsize): New.
	(_stp_register_ctl_channel): Create a proc read entry
	"bufsize" containing transport buffer sizes.

2007-03-28  Martin Hunt  <hunt@redhat.com>

	* control.c (_stp_ctl_open_cmd): Set _stp_pid.
	(stp_ctl_close_cmd): Clear _stp_pid.
	* transport.h: Declare _stp_pid;

2007-03-26  Frank Ch. Eigler  <fche@elastic.org>

	* transport.c: Add #include <linux/namei.h> for lookup_one_len.

2007-03-26  Martin Hunt  <hunt@redhat.com>

	* symbols.c (_stp_do_module): If a module has no symbols, just
	return NULL instead of an errorcode.

	* control.c, procfs.c, relayfs.c, transport.c, utt.c, utt.h:
	Revert back to using systemtap/modulename instead of systemtap_pid.

2007-03-21  Martin Hunt  <hunt@redhat.com>
